--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.6",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.60.5",
     "next": "15.0.3",
     "react": "18.x.x",
     "react-dom": "18.x.x",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "viem": "^2.21.47",
+    "wagmi": "^2.12.33"
   },
   "devDependencies": {
     "eslint": "^8",
