--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.17",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/ui": "^2.1.5",
     "eslint": "^8",
@@ -33,6 +35,7 @@
     "jsdom": "^25.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.7.2",
     "vitest": "^2.1.5"
   }
 }
